@@ -1,3 +1,10 @@
+2006-01-01
+	* Brad Fitzpatrick <brad@danga.com>:  allocate 1 slab per class
+	on start-up, to avoid confusing users with out-of-memory errors
+	later.  this is 18 MB of allocation on start, unless max memory
+	allowed with -m is lower, in which case only the smaller slab
+	classes are allocated.
+	
 2005-08-09
 	* Elizabeth Mattijsen <liz@dijkmat.nl>: needed a way to flush all
 	memcached backend servers, but not at exactly the same time (to
